--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@elizaos/plugin-starknet": "0.1.9",
     "@tavily/core": "0.0.2",
     "amqplib": "0.10.5",
-    "better-sqlite3": "11.5.0",
+    "better-sqlite3": "11.9.0",
     "custom-elizaos-client-direct-aptos": "^0.25.10",
-    "custom-elizaos-plugin-aptos": "^0.1.14",
+    "quanna-elizaos-plugin-aptos": "0.1.14",
     "elizaos-plugin-gmove": "^0.1.3",
     "fs": "0.0.1-security",
     "net": "1.0.2",
